# learn_opengl

./: CMakeLists.txt
include/glad/: glad.h
src/: camera.h  glad.c  main.cpp
src/shader/: fShader.fs  vShader.vs
src/shader/baseShader/: fShader.fs
src/shader/lightShader/: lightCubeShader.fs  lightShader.fs  lightShader.vs
